// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Note Actions Visible On Hover 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Actions With Long Heading 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          This is probably the greatest thing that's ever happened in my life
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Actions With No Author 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible psds-note__action-bar--meta-sibling"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Actions With No Author Long Meta 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible psds-note__action-bar--meta-sibling"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Actions With No Meta 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Basic 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note In A List 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <ol
    className="psds-note__list"
  >
    <li
      className="psds-note__list-item psds-theme--dark"
    >
      <div
        className="psds-note psds-theme--dark"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="psds-note__aside"
        >
          <div
            aria-hidden={true}
            className="psds-avatar psds-avatar--size-xsmall"
          >
            <img
              className="psds-avatar__image"
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              className="psds-avatar__initials"
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          className="psds-note__contents psds-theme--dark"
        >
          <div
            className="psds-note__header"
          >
            <div
              className="psds-note__heading"
            >
              Bob Ross
            </div>
          </div>
          <p
            className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
          >
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            className="psds-note__footer"
          >
            <div
              className="psds-note__metadata psds-theme--dark"
            >
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                className="psds-note__metadata-dot"
              >
                ·
              </span>
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="psds-note__list-item psds-theme--dark"
    >
      <div
        className="psds-note psds-theme--dark"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="psds-note__aside"
        >
          <div
            aria-hidden={true}
            className="psds-avatar psds-avatar--size-xsmall"
          >
            <img
              className="psds-avatar__image"
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              className="psds-avatar__initials"
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          className="psds-note__contents psds-theme--dark"
        >
          <div
            className="psds-note__header"
          >
            <div
              className="psds-note__heading"
            >
              Bob Ross
            </div>
          </div>
          <p
            className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
          >
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            className="psds-note__footer"
          >
            <div
              className="psds-note__metadata psds-theme--dark"
            >
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                className="psds-note__metadata-dot"
              >
                ·
              </span>
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      className="psds-note__list-item psds-theme--dark"
    >
      <div
        className="psds-note psds-theme--dark"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="psds-note__aside"
        >
          <div
            aria-hidden={true}
            className="psds-avatar psds-avatar--size-xsmall"
          >
            <img
              className="psds-avatar__image"
              onError={[Function]}
              onLoad={[Function]}
              src="//picsum.photos/128"
            />
            <div
              aria-label="Bob Ross"
              className="psds-avatar__initials"
              style={
                Object {
                  "backgroundColor": "#CB670B",
                }
              }
            >
              B
            </div>
          </div>
        </div>
        <div
          className="psds-note__contents psds-theme--dark"
        >
          <div
            className="psds-note__header"
          >
            <div
              className="psds-note__heading"
            >
              Bob Ross
            </div>
          </div>
          <p
            className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
          >
            If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
          </p>
          <div
            className="psds-note__footer"
          >
            <div
              className="psds-note__metadata psds-theme--dark"
            >
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta first
              </span>
              <span
                aria-hidden={true}
                className="psds-note__metadata-dot"
              >
                ·
              </span>
              <span
                className="psds-note__metadata-datum psds-theme--dark"
              >
                meta second
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Components/Note Linked Metadata 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            <a
              className="psds-link psds-link--appearance-default psds-theme--dark"
              href="#"
            >
              i'm a link
            </a>
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            <a
              className="psds-link psds-link--appearance-subtle"
              href="#"
            >
              i'm a subtle link
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Long Metadata 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note No Author 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Single Action 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Three Actions 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="Analytics"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note Two Actions 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            title="Bookmark"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <button
            className="psds-note__action psds-theme--dark"
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note With Action Menu 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
        <div
          className="psds-note__action-bar psds-theme--dark psds-note__action-bar--action-bar-visible"
        >
          <button
            className="psds-note__action psds-theme--dark"
            onClick={[Function]}
            title="More"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="placeholder icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                  fillOpacity=".95"
                />
              </svg>
            </div>
          </button>
          <div
            aria-live="polite"
            style={
              Object {
                "display": "none",
              }
            }
          />
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note With H 1 Heading 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          <h1>
            Bob Ross
          </h1>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note With Heading Component 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          <h3
            className="psds-text__heading psds-text__heading--size-medium psds-text__heading--color-primary psds-theme--dark"
          >
            Bob Ross
          </h3>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note With Linked Avatar 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <a
        aria-label="Bob Ross"
        href="https://duck.com?q=pluralsight"
      >
        <div
          aria-hidden={true}
          className="psds-avatar psds-avatar--size-xsmall"
        >
          <img
            className="psds-avatar__image"
            onError={[Function]}
            onLoad={[Function]}
            src="//picsum.photos/128"
          />
          <div
            aria-label="Bob Ross"
            className="psds-avatar__initials"
            style={
              Object {
                "backgroundColor": "#CB670B",
              }
            }
          >
            B
          </div>
        </div>
      </a>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          Bob Ross
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Note With Linked Heading 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="psds-note psds-theme--dark"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="psds-note__aside"
    >
      <div
        aria-hidden={true}
        className="psds-avatar psds-avatar--size-xsmall"
      >
        <img
          className="psds-avatar__image"
          onError={[Function]}
          onLoad={[Function]}
          src="//picsum.photos/128"
        />
        <div
          aria-label="Bob Ross"
          className="psds-avatar__initials"
          style={
            Object {
              "backgroundColor": "#CB670B",
            }
          }
        >
          B
        </div>
      </div>
    </div>
    <div
      className="psds-note__contents psds-theme--dark"
    >
      <div
        className="psds-note__header"
      >
        <div
          className="psds-note__heading"
        >
          <p
            className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
          >
            <a
              className="psds-link psds-link--appearance-subtle"
              href="#"
            >
              Bob Ross
            </a>
          </p>
        </div>
      </div>
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      >
        If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. At home you have unlimited time. See there, told you that would be easy. Decide where your cloud lives. Maybe he lives right in here.
      </p>
      <div
        className="psds-note__footer"
      >
        <div
          className="psds-note__metadata psds-theme--dark"
        >
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta first
          </span>
          <span
            aria-hidden={true}
            className="psds-note__metadata-dot"
          >
            ·
          </span>
          <span
            className="psds-note__metadata-datum psds-theme--dark"
          >
            meta second
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
